Add workarounds to fix #2983540: Can no longer select files iin detailed list view. This bug is caused by newly introduced bug in gtk+ 2.18+ and incompatibility with code taken from libexo: https://bugzilla.gnome.org/show_bug.cgi?id=612802. This also affects XFCE and thunar: http://bugzilla.xfce.org/show_bug.cgi?id=6230.